Changes for 2.4.3rc1

New features:
.......PS. [ZBX-4054] added support for SNMP values of type OID (asaveljevs)

Bug fixes:
..F....... [ZBX-8874] fixed possible wrong submit button activation when multiple submit buttons are present and "Enter" key is used to submit (Krists)
.......PS. [ZBX-8476] fixed queue being calculated incorrectly when there is even a slight time difference between server and proxy (asaveljevs)
A......... [ZBX-8832] fixed importing applications from linked templates (Krists)
A.F....... [ZBX-8979] fixed undefined indexes in the profiler on early version of PHP 5.3 (Pavels)
..F....... [ZBX-8983] fixed "schema" option description in frontend configuration file (Oleg)

--------------------------------------------------------------------------------
Changes for 2.4.2

New features:
A.F....... [ZBX-1357] updated Brazilian Portuguese, Polish and Russian translations; thanks to Zabbix translators (Richlv)

--------------------------------------------------------------------------------
Changes for 2.4.2rc1

New features:
A.F....... [ZBX-1357] updated Brazilian Portuguese, Greek, Italian, Japanese, Polish, Slovak and Spanish translations; thanks to Zabbix translators (Richlv)
...G...... [ZBX-8503] increased limitation of command length for remote commands with agent (Sasha)

Bug fixes:
........S. [ZBX-8978] fixed propagation of the SNMP bulk flag into discovered hosts (Sasha)
........S. [ZBX-8978] fixed propagation of the interfaces into discovered hosts in same order as in the parent host (Sasha)
..F....... [ZBX-8970] fixed interfaces list not being displayed correctly for discovered hosts (Krists)
....I..PS. [ZBX-8849] fixed redundant linking with -lcrypto when linking with Net-SNMP (asaveljevs)
...G...PS. [ZBX-8913] fixed JSON validation sometimes failing to process utf-8 sequences (wiper)
...G...... [ZBX-8951] fixed agent crash on HP-UX 11.31 when processing "net.if.discovery" item (asaveljevs, wiper)